--- a/paper/wrangleData.qmd
+++ b/paper/wrangleData.qmd
@@ -627,8 +627,8 @@ plot_support <- data_comparison %>%
   scale_shape_discrete(name = element_blank(),
                        breaks = bad_items)
 
-tx_note <- str_wrap("Notes: Each point represents the percentage of respondents in a country-year to give a democracy-supporting response to a particular survey item.  Hand-entered data is as reported in Claassen (2020b); the machine-collected data was collected directly from the original surveys.  The Asia Barometer's item on the evaluation of democracy accounts for most overreports, and the Pew Global Attitudes item on the importance of democracy accounts for most substantial underreports.  In both cases, as well as the overreports of the suitability of democracy item in the second wave of the Asian Barometer, the issues can be easily explained by errors in transcribing the data and/or deviations from the reported coding rule.  Deviations in other items result from inconsistent treatment of missing data and/or survey weights, reflecting in part differences in codebook reporting practices across surveys.",
-                    width = 118)
+tx_note <- str_wrap("Notes: Each point represents the percentage of respondents in a country-year to give a democracy-supporting response to a particular survey item.  Hand-entered data is as reported in Claassen (2020c); the machine-collected data was collected directly from the original surveys.  The Asia Barometer's item on the evaluation of democracy accounts for most overreports, and the Pew Global Attitudes item on the importance of democracy accounts for most substantial underreports.  In both cases, as well as the overreports of the suitability of democracy item in the second wave of the Asian Barometer, the issues can be easily explained by errors in transcribing the data in accordance with the reported coding rule.  Deviations in other items result from inconsistent treatment of missing data and/or survey weights, reflecting in part differences in codebook reporting practices across surveys.",
+                    width = 100)
 
 plot_support + 
     patchwork::plot_annotation(caption = tx_note) &
@@ -638,7 +638,7 @@ plot_support +
 
 For `r {mean(data_comparison$diff_perc_abs < .5)*100} %>% round()`% of the country-year-item observations, the difference between these percentages was negligible---less than half a percent---yielding points approximately along the plot's dotted line.
 But for the remaining observations, the difference was often substantial due to data-entry errors in the hand-entered data.
-For three survey items contributing observations to a total of 135 country-years, the differences were found to result from deviations from the original study's coding rules: for two items the median category was mistakenly also counted as a democracy-supporting response, and for one an above-median category was not (for details, see the online appendix).
+For three survey items contributing observations to a total of 135 country-years, the differences were found to result from deviations from the original study's coding rules: for two items the median category was mistakenly also counted as a democracy-supporting response, and for one an above-median category was not (for details, see online Appendix A).
 
 While these issues involve mistakes in recording the numerator of the percentage, the number of respondents who provided a democracy-supporting answer, entering the denominator, the total number of respondents asked a question, was also problematic on occasion.
 For example, when the Americas Barometer surveyed Canada in 2010, it asked half its sample, whether when "democracy doesn't work," Canadians "need a strong leader who doesn’t have to be elected through voting."
@@ -654,8 +654,8 @@ These errors shifted the percentage of democracy-supporting responses in both di
 Finally, although not depicted on this plot, data-entry errors were also evident in the variable recording the year in which a survey was conducted: these typically reflected differences between the nominal year of a survey wave and when the survey was actually in the field in a particular country.
 This was an issue for some `r {nrow(needed)/nrow(sd) * 100} %>% round()`% of the country-year-item observations.
 
-Any one of these mistakes should give pause to any researchers tempted to meet the  challenge of 'janitor work' to harmonization research by hand entering data.
-Correcting all of them is sufficient to undermine the results published in @Claassen2020b on the sources of democratic support, as shown in the online appendix.
+Any one of these mistakes should give pause to any researchers tempted to meet the challenge of 'janitor work' in harmonization research by hand entering the needed data.
+Correcting all of them is sufficient to undermine the results published in @Claassen2020b on the sources of democratic support (see online Appendix B).
 
 
 # Discussion
@@ -666,9 +666,9 @@ To discern it requires close scrutiny of every manual entry; merely examining th
 Although failure to find support for a research hypothesis may prompt us to undertake a such a close review, an analysis that yields statistical significance is unlikely to trigger what will likely be, as in the above example, a time-consuming and difficult effort [see @Gelman2014, 464].
 These different courses put us in 'the garden of forking paths,' rendering our findings suspect even when we only ever perform a single analysis [@Gelman2014, 464].
 
-Our recommendations---to maximize automization, use the double-entry method, and embrace teamwork---take effort [cf., @EngzellRohrer2021].
+Our three recommendations---to maximize automization, use the double-entry method, and embrace teamwork---unquestionably take effort [cf., @EngzellRohrer2021].
 But as researchers automate more of their data entry, the chances that they can reuse their code in subsequent projects improve.
-Moreover, as the example of `DCPOtools` demonstrates, many common janitor-work chores already have been packaged as open-source software to make researchers' task easier and more straightforward. 
+Moreover, as the example of `DCPOtools` demonstrates, many common janitor-work chores already have been packaged as open-source software to make researchers' task even easier and more straightforward. 
 <!-- For example, see `readtext` [@Benoit2021] for formatting text files. -->
 <!-- "Write code instead of working by hand," as @Christensen2019 [, 197] admonish, "don't use Microsoft Excel if it can be avoided." -->
 And while the double-entry method is labor intensive, experiments have shown that it reduces error rates by thirty-fold even when done immediately after the initial collection and by the same person [@Barchard2011, 1837]; it is worth the extra effort.
@@ -681,7 +681,7 @@ Further, the above suggestions follow closely from a specific case and, although
 
 Nonetheless, we also hope the readers to see the shared logic of these suggestions and the growing literature to guide political scientists to conduct more reliable and credible research.
 For instance, in the same vein as our first suggestion, @Weidmann2023 provides a book-length set of illustrations on how to reduce "manual point and click" tasks found in a variety of studies with the `tidy`-data framework in the R language.
-@KapiszewskiKarcher2021 [, 288] even suggests that qualitative researchers should consider using "open-exchange format" of qualitative data analysis software to be more "transparent about the generation and analysis of data."
+
 Furthermore, we regard our efforts and recommendations as a contribution to the open science movement to produce more robust and credible research in the social sciences [see, e.g., @ChristensenEtAl2019] and beyond [see, e.g., @BarchardPace2011; @Lohr2014].
 With careful attention, not only can the threat of data-entry errors to our 'janitor work', our research, and our understanding of the world be minimized, but the transparency, openness, and credibility of our research can continuously grow.
 
@@ -704,7 +704,10 @@ With careful attention, not only can the threat of data-entry errors to our 'jan
 \setcounter{table}{0}
 \renewcommand{\thetable}{A.\arabic{table}}
 
-# Deviations from the Stated Coding Rules in 
+# Data-Entry Problems in the Democratic Support Source Data
+Comparing the original hand-entered dataset [@Claassen2020c] with data that were machine-collected using the `DCPOtools` package for R [@Solt2018] revealed three survey items for which the hand-entered data did not match the data's documented coding rules.
+These rules indicate that responses above the median value in the response scale are to be considered as supporting democracy, while those at the median value and below are not [see @Claassen2020b, Appendix 1.3].
+
 For example, the Asia Barometer asked respondents in 35 country-years to indicate whether they thought "a democratic political system" would be very good, fairly good, or bad for their country.
 According to the original study's coding rules [see @Claassen2020b, Appendix 1.3], only answers above the median of the response categories should be considered as democracy supporting, yet in this case the lukewarm intermediate category was coded as supporting democracy as well.^[
 Although this may be interpreted as an exercise of researcher judgment as to what constitutes a democracy-supporting response rather than a data-entry error [see @Hu2025], examination of similar answers to similar questions confirms that similarly lukewarm responses at and below the median response category  (e.g., in the Arab Barometer, that democracy was "somewhat appropriate" for the country) were coded as not supportive.]
@@ -720,7 +723,7 @@ A third example comes from the Pew Global Attitudes surveys' four-point item ask
 In this case, rather than including respondents who gave both responses above the median---"very important" and "somewhat important"---only those respondents who answered "very important" were entered as supporting democracy.
 This error caused the hand-entered percentages to be substantially lower in 91 country-years.
 
-<!-- # Reference {.unnumbered} -->
+# References {.unnumbered}
 
-<!-- ::: {#refs-appendix} -->
-<!-- ::: -->
+::: {#refs-appendix}
+:::
